--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nativescript/theme": "~2.2.1",
     "nativescript-angular": "~8.20.3",
     "nativescript-ui-listview": "^8.0.1",
+    "nativescript-ui-sidedrawer": "^8.0.0",
     "reflect-metadata": "~0.1.12",
     "rxjs": "^6.4.0",
     "tns-core-modules": "~6.3.0",
