--- a/App_Resources/Android/src/main/AndroidManifest.xml
+++ b/App_Resources/Android/src/main/AndroidManifest.xml
@@ -15,11 +15,13 @@
 	<uses-permission android:name="android.permission.INTERNET"/>
 
 	<application
+		android:networkSecurityConfig="@xml/network_security_config"
 		android:name="com.tns.NativeScriptApplication"
 		android:allowBackup="true"
 		android:icon="@drawable/icon"
 		android:label="@string/app_name"
-		android:theme="@style/AppTheme">
+		android:theme="@style/AppTheme"
+		>
 
 		<activity
 			android:name="com.tns.NativeScriptActivity"
